# pyapi

./: .env  Dockerfile  README.md  compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
app/: main.py
